stinking scrollbar is fixed

--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -13,6 +13,7 @@ $orange: #e65925;
 $pink: #edaac6;
 $white: #fff6f1;
 
+
 @font-face {
   font-family: 'Inter';
   src: url('./assets/fonts/Inter-VariableFont_slnt\,wght.ttf') format('ttf');
@@ -31,7 +32,7 @@ $body-font: 'Alte', sans-serif;
   border: 1px solid black;
   height: cald(100vh);
   width: 400vw;
-  overflow: scroll;
+  overflow: hidden;
   // overflow-x: scroll;
   // overflow-y: hidden;
   // display: flex;
